<resources>
    <string name="app_name">INEWS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">INews</string>
    <string name="nav_header_subtitle">Elevate Your Life with INews</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="bbc">BBC</string>
    <string name="ndtv">NDTV</string>
    <string name="lokshahi">LOKSHAHI</string>
    <string name="abp_majha">ABP MAJHA</string>
    <string name="zee24">ZEE 24</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="languages">Languages</string>
</resources>