<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/bbc"
            android:title="@string/bbc" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/abp_majha"
            android:title="@string/abp_majha" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/lokshahi"
            android:title="@string/lokshahi" />

        <item
            android:id="@+id/ndtv"
            android:icon="@drawable/ndtv"
            android:title="@string/ndtv" />
    </group>

    <item android:title="Upcomming">
        <menu>
            <item
                android:id="@+id/zee24"
                android:icon="@drawable/zee24"
                android:title="@string/zee24" />
        </menu>
    </item>
</menu>