<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nirajbava.inews.ui.home.HomeFragment"
        android:label="@string/bbc"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.nirajbava.inews.ui.gallery.GalleryFragment"
        android:label="@string/abp_majha"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.nirajbava.inews.ui.slideshow.SlideshowFragment"
        android:label="@string/lokshahi"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/ndtv"
        android:name="com.nirajbava.inews.Fragment.NDTVFragment"
        android:label="@string/ndtv"
        tools:layout="@layout/fragment_n_d_t_v" />

    <fragment
        android:id="@+id/zee24"
        android:name="com.nirajbava.inews.Fragment.ZEE24Fragment"
        android:label="@string/zee24"
        tools:layout="@layout/fragment_zee" />
</navigation>